<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".ui.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivCart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_shopping_cart" />

                    <ImageView
                        android:id="@+id/ivSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="7dp"
                        android:background="@drawable/ic_search" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_gray">

                        <Spinner
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:entries="@array/deliverArray"
                            android:padding="5dp" />
                    </FrameLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="7dp"
                        android:text="@string/deliverTo" />
                </LinearLayout>
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        app:cardBackgroundColor="@color/gray"
                        app:cardCornerRadius="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/accountStat"
                                android:textColor="@color/bold_gray" />

                            <ProgressBar
                                style="?android:attr/progressBarStyleHorizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="7dp"
                                android:layout_marginBottom="7dp"
                                android:progress="50" />

                            <TextView
                                android:id="@+id/tvAccountStatus"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="7dp"
                                android:text="@string/reviewing"
                                android:textColor="@color/colorAccent" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        android:layout_margin="10dp">

                        <androidx.viewpager.widget.ViewPager
                            android:id="@+id/view_pager"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:focusable="true"
                            android:focusableInTouchMode="true" />

                        <LinearLayout
                            android:id="@+id/lyt_page_indicator"
                            android:layout_width="match_parent"
                            android:layout_height="25dp"
                            android:layout_alignParentBottom="true"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:visibility="gone" />
                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvData"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:nestedScrollingEnabled="false" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:id="@+id/cardSpecialOrder"
                        app:cardBackgroundColor="@color/gray"
                        app:cardCornerRadius="20dp"
                        android:visibility="gone">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/specialOrder"
                                android:textColor="@color/black"
                                android:layout_gravity="center"
                                android:textSize="16sp" />

                            <Button
                                android:id="@+id/btnClickHere"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:background="@drawable/shape_white_rect"
                                android:paddingStart="20dp"
                                android:paddingEnd="20dp"
                                android:layout_marginBottom="7dp"
                                android:layout_marginTop="7dp"
                                android:text="@string/clickHere" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <com.github.ybq.android.spinkit.SpinKitView
                    android:id="@+id/spin_kit"
                    style="@style/SpinKitView.Circle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:SpinKit_Color="@color/colorAccent" />

            </FrameLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</layout>